--- a/.github/workflows/convert-yaml.yml
+++ b/.github/workflows/convert-yaml.yml
@@ -24,4 +24,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add snowflake-table.json
           git commit -m "Auto-converted YAML to JSON"
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/Rayala-Srikavya/terraform-demo.git main
