--- a/snowflake-table.yaml
+++ b/snowflake-table.yaml
@@ -15,4 +15,4 @@ snowflake:
         - name: email
           type: STRING
         - name: created_at
-          type: TIMESTAMP(6)
+          type: TIMESTAMP_NTZ(6)
